# deepdict

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-tests.yml
deepdict/: __init__.py  core.py  exceptions.py  matcher.py  merger.py
dictdeeper/: __init__.py  core.py  matcher.py
src/dictdeeper/: core.py  matcher.py  merger.py
tests/: test_deep_access.py  test_deep_matcher.py  test_deep_merger.py
