[tool.poetry]
name = "dictdeeper"
version = "1.2"
description = "DictDeeper: Easy traversal of deeply nested dicts."
authors = ["Henrique Bastos <henrique@bastos.net>", "Matthew Scott <matt@11craft.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "dictdeeper", from = "."},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/henriquebastos/dictdeeper"
Documentation = "https://github.com/henriquebastos/dictdeeper"
Repository = "https://github.com/henriquebastos/dictdeeper"
Issues = "https://github.com/henriquebastos/dictdeeper/issues"

[tool.poetry.dependencies]
python = "^3.9"
arrow = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
flake8 = "^7.1.1"
pylint = "^3.2.6"
isort = "^5.13.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core<2"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    ".idea",
    "build",
    "dist",
]

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.pytest.ini_options]
python_files = 'test*.py'
