[project]
name = "dictdeeper"
version = "1.2"
description = "DictDeeper: Easy traversal of deeply nested dicts."
license = "MIT"
readme = "README.md"
authors = [
    { name = "Henrique Bastos", email = "henrique@bastos.net" },
    { name = "Matthew Scott", email = "matt@11craft.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "arrow >=1.3.0",
]

[project.urls]
Homepage = "https://github.com/henriquebastos/dictdeeper"
Documentation = "https://github.com/henriquebastos/dictdeeper"
Repository = "https://github.com/henriquebastos/dictdeeper"
Issues = "https://github.com/henriquebastos/dictdeeper/issues"

[dependency-groups]
dev = [
    "pytest >=8.3.4,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_files = 'test*.py'

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    ".idea",
    "build",
    "dist",
]

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2
